# snake-linkedlist

./: CMakeLists.txt
ref_test/: accessors_test.cpp  constructor_test.cpp  iterator_test.cpp  modifiers_test.cpp
src/: ll.cpp  ll.h  ref_ll.cpp  ref_ll.h  snakebody.cpp
src/Archive/: ll.cpp  main.cpp  main.hpp
test/: accessors_test.cpp  constructor_test.cpp  iterator_test.cpp  ll_test.cpp  modifiers_test.cpp
